<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/sky_star"
    tools:context="com.example.lbs_tester10.MainActivity">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <TextView android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/enter_room"
            android:textAlignment="center"/>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">
            <EditText android:id="@+id/editText1"
                android:layout_width="0dp"
                android:layout_weight=".70"
                android:layout_height="wrap_content"
                android:ems="10" android:inputType="text"
                android:singleLine="true"
                android:imeOptions="actionDone"/>
            <Button android:id="@+id/buttonCheck"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_weight=".30"
                android:layout_height="wrap_content"
                android:onClick="checkRoom"
                android:text="@string/ok"/>
        </LinearLayout>
    </LinearLayout>

    <requestFocus/>
    <RelativeLayout android:id="@+id/contextLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="visible">
        <TableLayout android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="25dip">
            <TableRow android:id="@+id/tableRowLight1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dip">
            <TextView android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_de"
                android:text="MQTT"
                android:layout_gravity="right"
                android:textSize="20sp"/>
            </TableRow>
            <TableRow android:id="@+id/tableRowLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dip">
                <TextView android:id="@+id/textViewLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/light"
                    android:textAlignment="gravity"
                    android:textSize="24sp"/>
                <TextView android:id="@+id/textViewLightValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="24sp"/>

            </TableRow>
            <TableRow android:id="@+id/tableRowNoise" android:layout_width="0dip" android:layout_height="wrap_content" android:padding="5dip">
                <TextView android:id="@+id/textViewNoise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/noise" android:textAlignment="gravity" android:textSize="24sp"/>
                <TextView android:id="@+id/textViewNoiseValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="24sp"/>
            </TableRow>
        </TableLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="84dp"
            android:layout_height="58dp"
            android:layout_below="@+id/tableLayout1"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/image_content_description"
            android:src="@drawable/ic_bulb_on" />
        <ImageView
            android:id="@+id/ivGif"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="145dp"
            android:layout_marginTop="144dp"
            android:layout_marginEnd="146dp"
            android:layout_marginBottom="158dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.515" />

        <LinearLayout
            android:id="@+id/linearLayoutButtons"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp">

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginRight="14dp"
                android:onClick="switchLight"
                android:text="@string/lightonoff" />

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginRight="14dp"
                android:onClick="setHome"
                android:text="@string/set_Home" />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutButtons2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_above="@+id/linearLayoutButtons"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp">

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginRight="14dp"
                android:onClick="nearHome"
                android:text="@string/near_Home" />



<!--            <Button-->
<!--                android:id="@+id/button2"-->
<!--                style="?android:attr/buttonStyleSmall"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_vertical|center_horizontal"-->
<!--                android:layout_marginRight="14dp"-->
<!--                android:onClick="switchRinger"-->
<!--                android:text="@string/ringonoff" />-->

            <TextView android:id="@+id/nearhome"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="YES/NO"
                android:textAlignment="gravity"
                android:layout_marginRight="14dp"
                android:textSize="24sp"
                android:textColor="@color/red"
                />


        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>